--- a/bimdev-revitapi-library-main/ElementFilter/0.Command/Model/Form/FilterElementProcesser_Form.xaml
+++ b/bimdev-revitapi-library-main/ElementFilter/0.Command/Model/Form/FilterElementProcesser_Form.xaml
@@ -4,15 +4,35 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-        xmlns:c="clr-namespace:Model.Control;assembly=BIMDev.ControlLibrary"
+        xmlns:c="clr-namespace:Model.Control;assembly=BIMDev.ControlLibrary" 
+        xmlns:data="clr-namespace:Model.Data" 
+        d:DataContext="{d:DesignInstance Type=data:FilterElementData}"
         mc:Ignorable="d"
-        x:Name="root" Width="600"  Height="300"
+        x:Name="root" Width="600"  Height="300" FontSize=" 16 " Topmost="True"
         >
     <Window.Resources>
         <ResourceDictionary Source="/BIMDev.ControlLibrary;component/Model/Style/Styles.xaml" />
     </Window.Resources>
-    <StackPanel>
-        <TextBlock Text="{Binding Processor.View.Name}"/>
-        <ComboBox ItemsSource="{Binding Processor.AllCatergories}" DisplayMemberPath="Name"/>
+    <StackPanel Orientation="Vertical" Margin="15">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            
+            
+            <TextBox Text="Category : " FontWeight= "Bold" Margin="0 0 10 0"/>
+
+            <c:MultiComboBox ItemsSource="{Binding Processor.AllCategories}" SelectedItem="{Binding Processor.Categories}"
+                         SelectionMode="Multiple"  DisplayMemberPath="Name" DisplaySeparator=" , "
+                             HorizontalAlignment="Stretch" Grid.Column="1"/>
+            <Button Margin=" 0 12 10 0" Padding="12 3" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Right" Click="select_Clicked">Select</Button>
+            
+            
+        </Grid>
     </StackPanel>
 </Window>
