--- a/bimdev-revitapi-library-main/ElementFilter/0.Command/Model/Form/FilterElementProcesser_Form.xaml
+++ b/bimdev-revitapi-library-main/ElementFilter/0.Command/Model/Form/FilterElementProcesser_Form.xaml
@@ -8,7 +8,8 @@
         xmlns:data="clr-namespace:Model.Data" 
         d:DataContext="{d:DesignInstance Type=data:FilterElementData}"
         mc:Ignorable="d"
-        x:Name="root" Width="600"  Height="300" FontSize=" 16 " Topmost="True"
+        x:Name="root"  FontSize=" 16 " Topmost="True"
+        ResizeMode="NoResize" SizeToContent="WidthAndHeight"
         >
     <Window.Resources>
         <ResourceDictionary Source="/BIMDev.ControlLibrary;component/Model/Style/Styles.xaml" />
@@ -23,12 +24,12 @@
                 <RowDefinition/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            
-            
+
             <TextBox Text="Category : " FontWeight= "Bold" Margin="0 0 10 0"/>
 
-            <c:MultiComboBox ItemsSource="{Binding Processor.AllCategories}" SelectedItem="{Binding Processor.Categories}"
+            <c:MultiComboBox ItemsSource="{Binding Processor.AllCategories}" SelectedItems="{Binding Processor.Categories,Mode=TwoWay}"
                          SelectionMode="Multiple"  DisplayMemberPath="Name" DisplaySeparator=" , "
+                             Width="400"
                              HorizontalAlignment="Stretch" Grid.Column="1"/>
             <Button Margin=" 0 12 10 0" Padding="12 3" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Right" Click="select_Clicked">Select</Button>
             
