--- a/bimdev-revitapi-library-main/ElementFilter/0.Command/Model/Form/FilterElementProcesser_Form.xaml
+++ b/bimdev-revitapi-library-main/ElementFilter/0.Command/Model/Form/FilterElementProcesser_Form.xaml
@@ -8,7 +8,7 @@
         xmlns:data="clr-namespace:Model.Data" 
         d:DataContext="{d:DesignInstance Type=data:FilterElementData}"
         mc:Ignorable="d"
-        x:Name="root"  FontSize=" 16 " Topmost="True"
+        x:Name="root"  FontSize="16" Topmost="True"
         ResizeMode="NoResize" SizeToContent="WidthAndHeight"
         >
     <Window.Resources>
@@ -19,9 +19,11 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto"/>
                 <ColumnDefinition/>
+                <ColumnDefinition Width="auto"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition/>
+                <RowDefinition />
                 <RowDefinition/>
             </Grid.RowDefinitions>
 
@@ -31,9 +33,34 @@
                          SelectionMode="Multiple"  DisplayMemberPath="Name" DisplaySeparator=" , "
                              Width="400"
                              HorizontalAlignment="Stretch" Grid.Column="1"/>
-            <Button Margin=" 0 12 10 0" Padding="12 3" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Right" Click="select_Clicked">Select</Button>
-            
-            
+
+            <Button Padding="12 3" Grid.Column="2" VerticalAlignment="Center" Click="refresh_Clicked">Refresh</Button>
+
+            <TextBox Text="Parameter : " FontWeight= "Bold" Margin="0 8 10 0" Grid.Row="1"/>
+
+            <Grid Grid.Column="1" Grid.Row="1" Margin="0 8 0 0" DataContext="{Binding Processor.ParameterProcessor}">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="100"/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+
+                <ComboBox ItemsSource="{Binding Parameters}" DisplayMemberPath="Name" 
+                            SelectedItem="{Binding SelectedParameter}"
+                             Grid.Column="0"/>
+
+                <StackPanel Grid.Column="1" Margin="8 0 0 0" DataContext="{Binding SelectedParameter}">
+                    <ComboBox ItemsSource="{Binding Values}" 
+                          SelectedItem="{Binding SelectedValue}"
+                          DisplayMemberPath="Value"
+                              />
+                </StackPanel>
+            </Grid>
+
+
+
+            <Button Margin=" 0 12 10 0" Padding="12 3" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Right" Click="select_Clicked">Select</Button>
+
+
         </Grid>
     </StackPanel>
 </Window>
