--- a/bimdev-revitapi-library-main/ElementFilter/0.Command/Model/Form/FilterElementProcesser_Form.xaml
+++ b/bimdev-revitapi-library-main/ElementFilter/0.Command/Model/Form/FilterElementProcesser_Form.xaml
@@ -19,6 +19,7 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto"/>
                 <ColumnDefinition/>
+                <ColumnDefinition Width="auto"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition/>
@@ -31,7 +32,31 @@
                          SelectionMode="Multiple"  DisplayMemberPath="Name" DisplaySeparator=" , "
                              Width="400"
                              HorizontalAlignment="Stretch" Grid.Column="1"/>
-            <Button Margin=" 0 12 10 0" Padding="12 3" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Right" Click="select_Clicked">Select</Button>
+
+            <Button Padding="12 3"  Grid.Column="2" VerticalAlignment="Center" Click="refresh_Clicked">Refresh</Button>
+
+            <TextBox Text="Parameter : " FontWeight= "Bold" Margin="0 8 10 0" Grid.Row="1"/>
+
+            <Grid  Grid.Column="1" Grid.Row="1" Margin="0 8 0 0" DataContext="{Binding Processor.ParameterProcesser}">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="100">
+                    </ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <ComboBox ItemsSource="{Binding Parameters}" DisplayMemberPath="Name" 
+                          SelectedItem="{Binding SelectedParameter}"
+                          Grid.Column="0"/>
+                <StackPanel Grid.Column="1" Margin=" 8 0 0 0" DataContext="{Binding SelectedParameter}">
+                    <ComboBox ItemsSource="{Binding Values}"  
+                          SelectedItem="{Binding SelectedValue}"
+                          DisplayMemberPath="value"
+                          />
+                </StackPanel>    
+            </Grid>
+            
+           
+
+
+            <Button Margin=" 0 12 10 0" Padding="12 3" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Right" Click="select_Clicked">Select</Button>
             
             
         </Grid>
