--- a/bimdev-revitapi-library-main/ElementFilter/0.Command/Model/Form/FilterElementProcesser_Form.xaml
+++ b/bimdev-revitapi-library-main/ElementFilter/0.Command/Model/Form/FilterElementProcesser_Form.xaml
@@ -24,6 +24,7 @@
             <Grid.RowDefinitions>
                 <RowDefinition/>
                 <RowDefinition/>
+                <RowDefinition/>
             </Grid.RowDefinitions>
 
             <TextBox Text="Category : " FontWeight= "Bold" Margin="0 0 10 0"/>
@@ -39,8 +40,8 @@
 
             <Grid  Grid.Column="1" Grid.Row="1" Margin="0 8 0 0" DataContext="{Binding Processor.ParameterProcesser}">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="100">
-                    </ColumnDefinition>
+                    <ColumnDefinition Width="100"/>
+                    <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
                 <ComboBox ItemsSource="{Binding Parameters}" DisplayMemberPath="Name" 
                           SelectedItem="{Binding SelectedParameter}"
@@ -48,8 +49,11 @@
                 <StackPanel Grid.Column="1" Margin=" 8 0 0 0" DataContext="{Binding SelectedParameter}">
                     <ComboBox ItemsSource="{Binding Values}"  
                           SelectedItem="{Binding SelectedValue}"
-                          DisplayMemberPath="value"
+                          DisplayMemberPath="Value"
                           />
+
+                    <!--<c:MultiComboBox ItemsSource="{Binding Values}" SelectedItems="{Binding SelectedValues}"
+                                     DisplayMemberPath="Value" SelectionMode="Multiple" />-->
                 </StackPanel>    
             </Grid>
             
